--- a/index.html
+++ b/index.html
@@ -63,6 +63,55 @@
     </div>
   </aside> <!-- aside content wrapper ends-->
 
+  <section class="features">
+    <div class="content-wrapper">
+      <div class="features-items"></div>
+      <!-- Add your Features content here -->
+      <h1>Have the work week you always dreamed of - without the bad wifi.</h1>
+      <article>
+        <p class="fontawesome-icon"></p>
+        <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+      </article>
+      <article>
+        <p class="fontawesome-icon"></p>
+        <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+      </article>
+      <article>
+        <p class="fontawesome-icon"></p>
+        <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
+      </article>
+      <article>
+        <p class="fontawesome-icon"></p>
+        <p class="features-item-description">5 outdoor obstacle courses, including private beach &frac12; mile from bungalow.</p>
+      </article>
+      <article>
+        <p class="fontawesome-icon"></p>
+        <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
+      </article>
+      <article>
+        <p class="fontawesome-icon"></p>
+        <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
+      </article>
+    </div>
+  </section>
+
+  <section class="reviews">
+    <div class="content-wrapper">
+      <div class="">
+        <h1>Be a better team in 5 days, like these.</h1>
+  <article>
+    <img src="#" alt="LaCrue team">
+    <h3>LaCrue Bottling Co. October 2017</h3>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sagittis aliquam nunc. Nullam et rutrum orci. Mauris tempus venenatis 
+      augue pulvinar bibendum. Duis vel turpis ipsum. Morbi ut cursus nunc, sed laoreet diam. Praesent eros dui, malesuada non malesuada nec, 
+      tristique et metus.
+    </p>
+  </article>
+      </div>
+    </div>
+  </section>
+
 </main> <!--main wrapper-->
 
 <footer>
