--- a/about/index.html
+++ b/about/index.html
@@ -24,8 +24,99 @@
 
 <body>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <header>
+    <div class="content-wrapper">
+        <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a>
+      <div class="header-divider"></div>
+      <nav>
+        <ul>
+          <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="index.html">About</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header> 
+
+  <main>
+
+    <section class="mission">
+      <div class="content-wrapper">
+        <div class="mission-content">
+         <h1>Our Mission - we want to make you the team you always wanted to be.</h1> 
+         <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed ante volutpat ligula cursus rutrum et a eros. 
+          Proin non tortor vel augue vulputate faucibus non nec ligula. Fusce scelerisque maximus nisi, vel euismod est ultricies vitae. 
+          </p>
+          <p>
+          Vestibulum aliquam lorem et risus molestie blandit. Vivamus molestie blandit enim, sit amet commodo odio placerat interdum. 
+          Etiam at pretium nibh. Maecenas sodales leo id lacus fermentum, et ultricies odio faucibus. Aliquam suscipit, arcu eget semper 
+          varius, velit quam rutrum dolor, vel tempor nisi urna vitae magna. 
+         </p>
+        </div>
+      </div> <!-- mission content wrapper ends -->
+    </section>
+
+    <section class="map">
+      <figure>
+      </figure>
+    </section>
+  </main>
+
+  <section class="contact-section">
+    <div class="content-wrapper">
+      <h1>Contact us - because you all need this.</h3>
+      <address>
+      <div class="contact-general">
+        <h3>General Information</h3>
+        <p>333 Main St, Lake Geneva, WI 53147<br>
+        555-555-5555<br>
+        hello@unplugged.com
+        </p>
+      </div>
+      <div class="contact-chat">
+        <h3>Chat with a Facilitator</h3>
+        <p>555-555-5556<br>
+        faciliator@unplugged.com
+      </p>
+      </div>
+    </address>
+    </div>
+  </section>
+
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <div class="contact">
+          <h4>Contact</h4>
+          <address>
+            <p>
+              555-555-5555<br>
+              hello@unplugged.com
+            </p>
+          </address>
+        </div>
+        <div class="social">
+          <h4>Social</h4>
+          <div class="social-icons">
+            <p>
+              <a href="https://www.facebook.com/yoursite" target="_blank"></a>
+            </p>
+            <p>
+              <a href="http://www.twitter.com/yoursite" target="_blank"></a>
+            </p>
+            <p>
+              <a href="http://www.instagram.com/yoursite" target="_blank"></a>
+            </p>
+          </div>
+        </div>
+      </div> <!-- footer content ends -->
+    </div> <!-- footer content-wrapper ends -->
+  
+    <div class="copyright">
+      <p>Copyright 2019 | Unplugged</p>
+    </div>
+  </footer>
+
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
