Created code shell

--- a/faq/index.html
+++ b/faq/index.html
@@ -24,8 +24,87 @@
 
 <body>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <header>
+    <div class="content-wrapper">
+        <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a>
+      <div class="header-divider"></div>
+      <nav>
+        <ul>
+          <li><a href="index.html">FAQ</a></li>
+          <li><a href="../about/index.html" target="_blank">About</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header> 
+
+  <main>
+    <section class="faq">
+    <div class="content-wrapper">
+      <div class="faq-content">
+      <h1>Frequently Asked Questions</h1>
+      <p class="faq-questions">
+        How do I get to the Unplugged retreat?
+      </p>
+      <p class="faq-answers">
+        The quick brown fox jumps over the lazy dog.
+      </p>
+      <p class="faq-questions">
+         What kind of team is right for the Unplugged retreat?
+      </p>
+      <p class="faq-answers">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed ante volutpat ligula cursus rutrum et a eros. Proin non tortor vel augue vulputate faucibus non nec ligula. Fusce scelerisque maximus nisi, vel euismod est ultricies vitae. Vestibulum aliquam lorem et risus molestie blandit. Vivamus molestie blandit enim, sit amet commodo odio placerat interdum. Etiam at pretium nibh. Maecenas sodales leo id lacus fermentum, et ultricies odio faucibus.
+      </p>
+      <p class="faq-questions">
+        What size teams can you accommodate?
+      </p>
+      <p class="faq-answers">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed ante volutpat ligula cursus rutrum et a eros. 
+      </p>
+      <p class="faq-questions">
+        Is there really no wifi available?
+      </p>
+      <p class="faq-answers">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed ante volutpat ligula cursus rutrum et a eros. Proin non tortor vel augue vulputate faucibus non nec ligula. Fusce scelerisque maximus nisi, vel euismod est ultricies vitae. Vestibulum aliquam lorem et risus molestie blandit. Vivamus molestie blandit enim, sit amet commodo odio placerat interdum. Etiam at pretium nibh. Maecenas sodales leo id lacus fermentum, et ultricies odio faucibus.
+      </p>
+    </div>
+  </div>
+  </section>
+  </main>
+
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <div class="contact">
+          <h4>Contact</h4>
+          <address>
+            <p>
+              555-555-5555<br>
+              hello@unplugged.com
+            </p>
+          </address>
+        </div>
+        <div class="social">
+          <h4>Social</h4>
+          <div class="social-icons">
+            <p>
+              <a href="https://www.facebook.com/yoursite" target="_blank"></a>
+            </p>
+            <p>
+              <a href="http://www.twitter.com/yoursite" target="_blank"></a>
+            </p>
+            <p>
+              <a href="http://www.instagram.com/yoursite" target="_blank"></a>
+            </p>
+          </div>
+        </div>
+      </div> <!-- footer content ends -->
+    </div> <!-- footer content-wrapper ends -->
+  
+    <div class="copyright">
+      <p>Copyright 2019 | Unplugged</p>
+    </div>
+  </footer>
+
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
