Added flexbox properties

--- a/index.html
+++ b/index.html
@@ -97,18 +97,17 @@
 
   <section class="reviews">
     <div class="content-wrapper">
-      <div class="">
-        <h1>Be a better team in 5 days, like these.</h1>
-  <article>
-    <img src="#" alt="LaCrue team">
-    <h3>LaCrue Bottling Co. October 2017</h3>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sagittis aliquam nunc. Nullam et rutrum orci. Mauris tempus venenatis 
-      augue pulvinar bibendum. Duis vel turpis ipsum. Morbi ut cursus nunc, sed laoreet diam. Praesent eros dui, malesuada non malesuada nec, 
-      tristique et metus.
-    </p>
-  </article>
-      </div>
+        <h2>Be a better team in 5 days, like this one.</h2>
+        <article>
+          <div>
+            <h3>LaCrue Bottling Co. October 2017</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sagittis aliquam nunc. Nullam et rutrum orci. Mauris tempus venenatis 
+                augue pulvinar bibendum. Duis vel turpis ipsum. Morbi ut cursus nunc, sed laoreet diam. Praesent eros dui, malesuada non malesuada nec, 
+                tristique et metus.
+              </p>
+            </div>
+        </article>
     </div>
   </section>
 
